--- a/MN2/MN2/MN2.vcxproj
+++ b/MN2/MN2/MN2.vcxproj
@@ -78,7 +78,11 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="main.cu" />
+    <CudaCompile Include="Matrix.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Matrix.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
